[package]
name = "rust-game"
version = "0.1.0"
authors = ["Vasantha Kumar A <kvasanth373@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.14"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf","image"]

